welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value a
  if((a<0 && 100<b)|| (b<0 && 100<b)){return true}
      ^icyHot:2: error: not found: value b
  if((a<0 && 100<b)|| (b<0 && 100<b)){return true}
                 ^icyHot:2: error: not found: value b
  if((a<0 && 100<b)|| (b<0 && 100<b)){return true}
                       ^icyHot:2: error: not found: value b
  if((a<0 && 100<b)|| (b<0 && 100<b)){return true}
                                  ^